--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>FilterDB</title>
+    <link rel="stylesheet" href="node_modules/materialize-css/bin/materialize.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="src/css/index.css" />
   </head>
   <body>
-    <h1>hello</h1>
     <main id="app"></main>
-    <script src="./build/bundle.js" type="text/javascript"></script>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/materialize-css/bin/materialize.js"></script>
+    <script src="build/bundle.js" type="text/javascript"></script>
   </body>
 </html>
